--- a/src/stiles/App.css
+++ b/src/stiles/App.css
@@ -18,40 +18,54 @@
   justify-content: center;
 }
 
-.result {
+.box-search {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 90px;
+}
+
+.box-search input {
+  width: 40%;
+  margin: 0;
+  padding: 5px 15px;
+  border: 1px solid #8f16db;
+}
+
+/* .result {
   font-size: 35px;
   font-weight: bold;
-}
+} */
 
-.box-input-changes .result {
+/* .box-input-changes .result {
   margin-bottom: 20px;
-}
+} */
 
-.disp-ilb {
+/* .disp-ilb {
   display: inline-block;
   margin-left: 40px;
   padding: 15px;
   text-align: center;
   border: 2px solid silver;
-}
+} */
 
 button {
   padding: 5px 7px;
   cursor: pointer;
 }
 
-.class-count button+button, .count button+button {
+/* .class-count button+button, .count button+button {
   margin-left: 20px;
-}
+} */
 
-.box-input-changes .result {
+/* .box-input-changes .result {
   color: green;
 }
 
 .box-input-changes input {
   padding: 10px;
   font-size: inherit;
-}
+} */
 
 .separator-line {
   width: 80%;
@@ -106,10 +120,4 @@ button {
 
 .box-btn button {
   margin-top: 0;
-}
-
-/* Счётчки и инпут */
-
-.count, .class-count, .box-input-changes {
-  display: none;
 }
